  a distance function, TimeBox will assume the desired distance is the
  Euclidean distance and will use the fast 1-NN version. To use the old
  MODELS::NN, either explicitly specify a distance function or the
  classification model in the option "runs::model".
- Implements MODELS.NN1DTW for fast execution of 1-NNDTW using lower-
  bounding techniques and early abandon.


TimeBox 0.10.7: released 2016-Mar-18
- Fixes an issue with TB.SHARPSHOOT, implementing options similar to
  those of TB.SCAT.
- Fixes an issue with TB.SCAT which caused arguments to be improperly
  parsed and sometimes ignored.


TimeBox 0.10.6: released 2016-Mar-04
- Introduces functions to get information on data sets without the need
  to load the full data: TS.LOADMETA and TS.SAVEMETA handle meta-
  information within data sets, and TS.GETDIM retrieves the number of
  instances and the length of the series.
- Introduces TS.GETPATH to return the path where a data set file is
  supposed to be stored.
- Allows TS.MAKEFOLDS to make validation folds: you may provide an index
  over an existing fold to obtain a new set of folds constructed on the 
  indexed data.
- Adds TB.SHARPSHOOT to produce SharpShoot plots, and add option
  -nofigure to TB.SCAT. This is useful to use TB.SCAT in subplots.
- Adds TB.MERGECELLS to work with data loaded by TS.LOADFILES: this
  function actually concatenates cells with equal number of rows into a
  single cell, removing rows where any of the original cell had missing
  data.
- Fixes bugs with TB.SPLITSTRING, TS.GETNAMES, and TS.SAVE. Also
  improves documentation of several functions and some error messages
  are now more informative.


TimeBox 0.9.5: released 2015-Nov-30
- Introduces functions for distance matrix-based ensembles. The
  functions in RUNS.DME implement the strategies reported in the
  following paper: Giusti, R; Silva, D.F.; and Batista, E.A.P.A. "Time
  Series Classification with Representation Ensembles". Published on the